--- a/RestFulAPI/demo.html
+++ b/RestFulAPI/demo.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="container" ng-app="app" ng-controller="ctrl">
-    <h2>RESTful Consumer - AngularJS</h2>
+    <h2 style="color: black;">RESTful Consumer - AngularJS</h2>
     <form>
         <div class="mb-3 mt-3">
             <label class="form-label">Email</label>
@@ -38,7 +38,7 @@
             <label class="form-label">Country</label>
             <select class="form-select" aria-label="Default select example">
                 <option selected value="">Open this select menu</option>
-                <option value="VN">Việt Name</option>
+                <option value="VN">Việt Nam</option>
                 <option value="US">United States</option>
                 <option value="CN">China</option>
             </select>
@@ -52,14 +52,16 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Email Address</th>
+                <th scope="col">Full name</th>
+                <th scope="col">Marks</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Country</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr ng-repeat="(key,stu) in items">
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
