--- a/RestFulAPI/demo.html
+++ b/RestFulAPI/demo.html
@@ -36,7 +36,7 @@
         </div>
         <div class="mb-3 mt-3">
             <label class="form-label">Country</label>
-            <select class="form-select" aria-label="Default select example">
+            <select class="form-select" aria-label="Default select example" ng-model="form.country">
                 <option selected value="">Open this select menu</option>
                 <option value="VN">Việt Nam</option>
                 <option value="US">United States</option>
@@ -62,8 +62,15 @@
         </thead>
         <tbody>
             <tr ng-repeat="(key,stu) in items">
-                <td>Mark</td>
-                <td>Otto</td>
+                <td>{{stu.email}}</td>
+                <td>{{stu.fullname}}</td>
+                <td>{{stu.mark}}</td>
+                <td>{{stu.gender?'Male':'Female'}}</td>
+                <td>{{stu.country}}</td>
+                <td>
+                    <button ng-click="edit(key)">Edit</button>
+                    <button ng-click="delete(key)">Delete</button>
+                </td>
             </tr>
         </tbody>
     </table>
